<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/sms_prefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sms_prefix_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/num_winners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/num_winners_hint"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/num_gamers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/num_gamers_hint"
        android:inputType="number" />
    
    <EditText
        android:id="@+id/base_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/base_hour"
        android:inputType="number" />
    
    <Button
        android:id="@+id/button_save_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save" 
        android:onClick="save"/>

    

</LinearLayout>